--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         <meta name="author" content="Mohammed">
         <title>Tutorials</title>
         <link rel="stylesheet" href={% static "css/main.css" %}>
+        <link rel="icon" type="images/x-icon" href={% static "images/favicon.svg" %}>
         <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet" />
         <script src="main.js" defer></script>
         <link href="{% static 'fontawesomefree/css/fontawesome.css' %}"
