--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -1,5 +1,5 @@
 <footer id="footerWrapper">
-    <div>
-        <a>Home</a>
+    <div class="content">
+        © Tutorials 2023
     </div>
 </footer>
