--- a/static/sass/footer.scss
+++ b/static/sass/footer.scss
@@ -3,4 +3,11 @@ footer {
     min-height: 100px;
     background:teal;
     padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .content {
+        text-align: center;
+        color: var(--white);
+    }
 }
