--- a/static/sass/product-details.scss
+++ b/static/sass/product-details.scss
@@ -11,6 +11,11 @@
         background: var(--white);
         border-radius: 5px;
         padding:1rem;
+        .lessons_list {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
         .video {
             width:100%;
             height: 100%;
