--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
-{% load crispy_forms_tags %}
 {% block body %}
     <div class="register-page">
         <form method="post">
             <h1>Register</h1>
             {% csrf_token %}
-            {{ form|crispy }}
+            {{ form }}
             <p class="text-center">
                 If you already have an account,
                 <a href="{% url 'accounts:login' %}">login</a>
